# sensormap-bff

./: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
app/: areas.py  config.py  main.py  plot_samples.py  plots.py  projects.py  soil_profiles.py  soil_types.py  transects.py  utils.py
app/generic/: router.py
app/models/: config.py
app/routes/: areas.py  gnss.py  instrument_channels.py  instruments.py  plot_samples.py  plots.py  projects.py  sensordata.py  sensors.py  soil_profiles.py  soil_types.py  transects.py  users.py  utils.py
app/tools/: proxy.py
