[tool.poetry]
name = "sensormap-bff"
version = "1.2.1"
description = "The backend-for-frontend for sensormap"
authors = ["Evan Thomas <evan.thomas@epfl.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic-settings = "^2.0.3"
httpx = "^0.27.0"
python-keycloak = "^3.7.0"
fastapi-keycloak = "^1.0.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
